--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabuleiro</title>
     <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/card.css">
 </head>
 <body>
 
@@ -18,6 +19,7 @@
 
     <div class="cardBox"></div>
 
+    <script src="js/classes/Cards.js" defer></script>
     <script src="js/classes/Place.js" defer></script>
     <script src="js/main.js" defer></script>
 </body>
