--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <div id="back">
         <div id="board"></div>
         <div id="playerMenu">
-            <div id="cardViewer"></div>
             <div id="cardBox"></div>
+        </div>
+        <div id="cardView">
+            <img id="cardViewImg">
         </div>
     </div>
 
