--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="cardBox"></div>
         </div>
         <div id="cardView">
-            <img id="cardViewImg">
+            <img id="cardViewImg" class="imgCartaView">
         </div>
     </div>
 
