Update moving cards

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <div class="cardBox"></div>
 
+    <script src="js/board.js" defer></script>
     <script src="js/classes/Cards.js" defer></script>
     <script src="js/classes/Place.js" defer></script>
     <script src="js/main.js" defer></script>
