--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="style/card.css">
 </head>
 <body>
-
     <div id="back">
-        <div id="board"></div>
+
+        <label class="lblT" id="id_view">-</label>
+        <label class="lblT" id="org_view">-</label>
+
+        <div id="board">
+            <img id="boardImg" src="imgs/boardImage.jpg">
+        </div>
         <div id="playerMenu">
             <div id="cardBox"></div>
         </div>
