--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
         <label class="lblT" id="id_view">-</label>
         <label class="lblT" id="org_view">-</label>
+        <label class="lblT" id="range_view">-</label>
 
         <div id="board">
             <img id="boardImg" src="imgs/boardImage.jpg">
         </div>
         <div id="playerMenu">
             <div id="cardBox"></div>
+            <button class="phase">Next Phase</button>
         </div>
         <div id="cardView">
             <img id="cardViewImg" class="imgCartaView">
@@ -26,6 +28,7 @@
 
     <div class="cardBox"></div>
 
+    <script src="js/functionsMath.js" defer></script>
     <script src="js/board.js" defer></script>
     <script src="js/classes/Cards.js" defer></script>
     <script src="js/classes/Place.js" defer></script>
