--- a/index.html
+++ b/index.html
@@ -9,26 +9,34 @@
 </head>
 <body>
     <div id="back">
-
         <label class="lblT" id="id_view">-</label>
         <label class="lblT" id="org_view">-</label>
         <label class="lblT" id="range_view">-</label>
+        <label class="lblT" id="turn_view">-</label>
+        <label class="lblT" id="act_view">-</label>
 
         <div id="board">
             <img id="boardImg" src="imgs/boardImage.jpg">
         </div>
         <div id="playerMenu">
             <div id="cardBox"></div>
-            <button class="phase">Next Phase</button>
+            <label class="phaseL" id="boardPhase">Fase de Movimento</label>
+            <button class="phase" onclick="proxFase()">Next Phase</button>
         </div>
         <div id="cardView">
-            <img id="cardViewImg" class="imgCartaView">
+            <img id="cardViewImg" class="imgCardView">
+            <div id="cardLabels">
+                <label class="cardViewLbl" id="cardViewPower">P:</label>
+                <label class="cardViewLbl" id="cardViewLife">L:</label>
+                <label class="cardViewLbl" id="cardViewMove">M:</label>
+            </div>
         </div>
     </div>
 
     <div class="cardBox"></div>
 
     <script src="js/functionsMath.js" defer></script>
+    <script src="js/gameStatus.js" defer></script>
     <script src="js/board.js" defer></script>
     <script src="js/classes/Cards.js" defer></script>
     <script src="js/classes/Place.js" defer></script>
