--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <div id="board">
             <img id="boardImg" src="imgs/boardImage.jpg">
+            <label id="boardDmg">00</label>
         </div>
         <div id="playerMenu">
             <div id="cardBox"></div>
