--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <label class="lblT" id="range_view">-</label>
         <label class="lblT" id="turn_view">-</label>
         <label class="lblT" id="act_view">-</label>
+        <div id="boardDmg"></div>
 
         <div id="board">
             <img id="boardImg" src="imgs/boardImage.jpg">
-            <label id="boardDmg">00</label>
         </div>
         <div id="playerMenu">
             <div id="cardBox"></div>
