--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tabuleiro</title>
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/card.css">
+    <link rel="stylesheet" href="style/colorDom.css">
 </head>
 <body>
     <div id="back">
@@ -39,6 +40,7 @@
     <script src="js/functionsMath.js" defer></script>
     <script src="js/gameStatus.js" defer></script>
     <script src="js/board.js" defer></script>
+    <script src="js/classes/Player.js" defer></script>
     <script src="js/classes/Cards.js" defer></script>
     <script src="js/classes/Place.js" defer></script>
     <script src="js/main.js" defer></script>
