--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
     <div id="back">
-        <label class="lblT" id="id_view">-</label>
-        <label class="lblT" id="org_view">-</label>
-        <label class="lblT" id="range_view">-</label>
-        <label class="lblT" id="turn_view">-</label>
-        <label class="lblT" id="act_view">-</label>
+        <!-- 
+            <label class="lblT" id="id_view">-</label>
+            <label class="lblT" id="org_view">-</label>
+            <label class="lblT" id="range_view">-</label>
+            <label class="lblT" id="turn_view">-</label>
+            <label class="lblT" id="act_view">-</label>
+        -->
         <div id="boardDmg"></div>
 
         <div id="board">
@@ -31,6 +33,7 @@
                 <label class="cardViewLbl" id="cardViewPower">P:</label>
                 <label class="cardViewLbl" id="cardViewLife">L:</label>
                 <label class="cardViewLbl" id="cardViewMove">M:</label>
+                <label class="cardViewLbl" id="cardViewPeace"></label>
             </div>
         </div>
     </div>
