--- a/index.html
+++ b/index.html
@@ -7,19 +7,56 @@
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/card.css">
     <link rel="stylesheet" href="style/colorDom.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style/homeStyle.css">
 </head>
 <body>
-    <div id="endgame"></div>
+    <div id="endgame">
+        <div class="container">
+            <h1 class="h1">Domination</h1>
+            <a id="a-playButton"><button class="play-button" onclick="startGame()">
+                <span class="play-icon">&#9658;</span> Play
+            </button></a>
+        </div>
+        <div class="icon-container">
+            <button class="option-button" id="-" onclick="rmvPlayer()">-</button>
+            <i class="fas" id="0_sl"><img height="100px" width="100px"  src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(0)" id="0_slImg" draggable="false"></i>
+            <i class="fas" id="1_sl"><img height="100px" width="100px" src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(1)" id="1_slImg" draggable="false"></i>
+            <i class="fas" id="2_sl" style="display: none;"><img height="100px" width="100px" src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(2)" id="2_slImg" draggable="false"></i>
+            <i class="fas" id="3_sl" style="display: none;"><img height="100px" width="100px" src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(3)" id="3_slImg" draggable="false"></i>
+            <i class="fas" id="4_sl" style="display: none;"><img height="100px" width="100px" src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(4)" id="4_slImg" draggable="false"></i>
+            <i class="fas" id="5_sl" style="display: none;"><img height="100px" width="100px" src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(5)" id="5_slImg" draggable="false"></i>
+            <i class="fas" id="6_sl" style="display: none;"><img height="100px" width="100px" src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(6)" id="6_slImg" draggable="false"></i>
+            <i class="fas" id="7_sl" style="display: none;"><img height="100px" width="100px" src="/imgs/iconuser.png" alt="" 
+                class="pais" onclick="ctrSelector(7)" id="7_slImg"></i>
+                <button class="option-button" id="+" onclick="addPlayer()">+</button>
+            </div>
+        <label class="h1" style="font-size: 25px; color: gray;">Número de turnos:</label>
+        <select id="turnCoder" class="option-button" style="margin-top: 15px; font-size: 30px; width: 70px;">
+            <option value=5>5</option>
+            <option value=10>10</option>
+            <option value=15>15</option>
+            <option value=20>20</option>
+            <option value=25>25</option>
+        </select>
+    </div>
     <div id="back">
-        <label class="lblT" id="id_view">-</label>
-        <label class="lblT" id="org_view">-</label>
-        <label class="lblT" id="range_view">-</label>
-        <label class="lblT" id="act_view">-</label>
-
+        
         <img src="./imgs/soldier.png" class="game-icon" width="40px" height="50px" style="left: 0; bottom: 0;margin: 10px;">
         <img src="./imgs/swords.png" class="game-icon" width="50px" height="50px" style="right: 2%;top: 2%; rotate: 10deg;">
         <img src="./imgs/swords.png" class="game-icon" width="50px" height="50px" style="right: 31%;bottom: 2%; rotate: -20deg;">
         <!-- 
+            <label class="lblT" id="id_view">-</label>
+            <label class="lblT" id="org_view">-</label>
+            <label class="lblT" id="range_view">-</label>
+            <label class="lblT" id="act_view">-</label>
             <label class="lblT" id="turn_view">-</label>
         -->
         <div id="boardDmg"></div>
@@ -34,6 +71,8 @@
             <i class="phaseI"><label class="phaseL" id="boardPhase">Fase de Movimento</label></i>
             <i><button class="phase" onclick="proxFase()">Próx. Fase</button></i>
             <i><button class="phase" onclick="proxPlayer()">Próx. Jogador</button></i>
+            <i><img height="80px" width="80px" style="position: absolute; top: 40%; right: -12%; border: 2px solid white; border-radius: 50%;" src="/imgs/iconuser.png" alt="" 
+                class="pais" id="turnWho" draggable="false"></i>
    
         </div>
         <div id="cardView">
@@ -55,5 +94,6 @@
     <script src="js/classes/Cards.js" defer></script>
     <script src="js/classes/Place.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script src="js/homeSetup.js" defer></script>
 </body>
 </html>
